--- a/.github/goreleaser.yml
+++ b/.github/goreleaser.yml
@@ -21,13 +21,11 @@ jobs:
         name: Set up Go
         uses: actions/setup-go@v4
       -
-        name: Check PR Merge and Check Status
-        run: |
-          if [ "${{ github.event_name }}" == "push" ] && [ "${{ github.ref }}" == "refs/heads/main" ] && [ "${{ github.event.workflow_run.conclusion }}" == "success" ]; then
-            echo "PR merged to main with all checks passed. Running GoReleaser..."
-            # Run GoReleaser command here
-          else
-            echo "Skipping GoReleaser: Not a push to main branch or checks failed."
-          fi
+        name: Run GoReleaser
+        uses: goreleaser/goreleaser-action@v4
+        with:
+          distribution: goreleaser
+          version: latest
+          args: release --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
