--- a/cmd/td/.goreleaser.yaml
+++ b/cmd/td/.goreleaser.yaml
@@ -8,22 +8,16 @@ before:
     - go generate ./...
 builds:
   - env:
-      - GO_VERSION=1.20
+      - GO_VERSION=1.21
     goos:
       - linux
       - windows
       - darwin
 # replaces architecture naming in the archive name
 archives:
-  - replacements:
-      darwin: Darwin
-      linux: Linux
-      windows: Windows
-      386: i386
-      amd64: x86_64
-    format_overrides:
-      - goos: windows
-        format: zip
+  - format_overrides:
+    - goos: windows
+      format: zip
 checksum:
   name_template: 'checksums.txt'
 snapshot:
