--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -1,32 +1,23 @@
-name: goreleaser
-
-on:
-  workflow_dispatch:
-  pull_request:
-  push:
-    tags: ['v*']
-
-permissions:
-  contents: write
-  id-token: write
-  packages: write
-
 jobs:
   release:
     runs-on: ubuntu-latest
     env:
       flags: ""
     steps:
-      - if: ${{ !startsWith(github.ref, 'refs/tags/v') }}
+      - name: Set snapshot flags for PR events
+        if: github.event_name == 'pull_request'
         run: echo "flags=--snapshot" >> $GITHUB_ENV
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: actions/setup-go@v4
+      - name: Setup Go environment
+        uses: actions/setup-go@v4
         with:
           go-version: 1.22.1
           cache: true
-      - uses: goreleaser/goreleaser-action@v4
+      - name: Run GoReleaser
+        uses: goreleaser/goreleaser-action@v4
         with:
           distribution: goreleaser
           version: latest
