--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -1,4 +1,4 @@
-name: goreleaser
+name: Build Release
 
 on:
   workflow_dispatch:
@@ -58,7 +58,6 @@ jobs:
           distribution: goreleaser
           version: latest
           args: release --clean ${{ env.flags }}
-          workdir: ./cmd/td
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GOPATH: /home/runner/go
