--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -58,6 +58,7 @@ jobs:
           distribution: goreleaser
           version: latest
           args: release --clean ${{ env.flags }}
+          workdir: ./cmd/td
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GOPATH: /home/runner/go
