--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -2,6 +2,7 @@ before:
   hooks:
     - go mod tidy
 builds:
+- main: ./cmd/td/
 - targets: [go_first_class]
   mod_timestamp: '{{ .CommitTimestamp }}'
   flags:
