--- a/cmd/td/.goreleaser.yaml
+++ b/cmd/td/.goreleaser.yaml
@@ -2,8 +2,8 @@ before:
   hooks:
     - go mod tidy
 builds:
-- main: ./cmd/td/
-- targets: [go_first_class]
+- main: ./cmd/td/main.go
+  targets: [go_first_class]
   mod_timestamp: '{{ .CommitTimestamp }}'
   flags:
     - -trimpath
