--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -3,10 +3,14 @@ name: Build Release
 on:
   workflow_dispatch:
   pull_request:
+    paths:
+      - '**.go'
   push:
     branches:
       - main
     tags: ['v*']
+    paths:
+      - '**.go'
 
 permissions:
   contents: write
