--- a/cmd/td/.goreleaser.yaml
+++ b/cmd/td/.goreleaser.yaml
@@ -26,7 +26,7 @@ brews:
   - name: voioo
     repository:
       owner: voioo
-      name: td
+      name: homebrew-td
     folder: Formula
     homepage: https://github.com/voioo/td
     description: A simple todo list manager written in Go
