remove brew formula from this repo

--- a/cmd/td/.goreleaser.yaml
+++ b/cmd/td/.goreleaser.yaml
@@ -23,7 +23,7 @@ changelog:
 release:
   name_template: 'v{{ .Version }}'
 brews:
-  - name: voioo
+  - name: td
     repository:
       owner: voioo
       name: homebrew-td
