test: Add comprehensive test suite for td application
Add unit tests for core components:
- Model initialization and state management
- Task creation and manipulation
- Repository file loading and saving
- Task lifecycle and state transitions

Improve error handling and test coverage for repository operations

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
           cache: true
 
       - name: Check formatting
-        if: matrix.os == 'ubuntu-latest'  # Only check formatting on Linux
+        if: matrix.os == 'ubuntu-latest'
         working-directory: ./cmd/td
         run: |
           if [ "$(gofmt -l . | wc -l)" -gt 0 ]; then
