chore: Update GitHub Actions workflow permissions
Add explicit permissions for CI and release workflows to:
- Enable content writes
- Allow pull request reads
- Support package and ID token writes

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,10 @@ on:
   push:
     branches: [ "main" ]
 
+permissions:
+  contents: write
+  pull-requests: read
+
 jobs:
   test:
     name: Test (${{ matrix.os }})
@@ -43,6 +47,8 @@ jobs:
     needs: test
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v4
         with:
