chore: Improve Windows archive generation in release workflow
- Add PowerShell-based archive compression for Windows builds
- Ensure consistent archive creation across different platforms
- Simplify cross-platform archive generation logic

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -97,7 +97,11 @@ jobs:
           if [[ "${{ matrix.archive }}" == "tar.gz" ]]; then
             tar czf ../td_${{ matrix.platform }}_${{ matrix.arch }}.${{ matrix.archive }} *
           else
-            zip -r ../td_${{ matrix.platform }}_${{ matrix.arch }}.${{ matrix.archive }} *
+            if [[ "${{ runner.os }}" == "Windows" ]]; then
+              powershell -Command "Compress-Archive -Path * -DestinationPath ../td_${{ matrix.platform }}_${{ matrix.arch }}.${{ matrix.archive }}"
+            else
+              zip -r ../td_${{ matrix.platform }}_${{ matrix.arch }}.${{ matrix.archive }} *
+            fi
           fi
           cd ..
           if [[ "${{ runner.os }}" == "macOS" ]]; then
