--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,26 +43,36 @@ jobs:
         working-directory: ./cmd/td
         run: go test -v ./...
 
-  tag:
+  create-release:
     needs: test
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-    outputs:
-      new_version: ${{ steps.tag_version.outputs.new_version }}
-      tag: ${{ steps.tag_version.outputs.new_tag }}
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
           
       - name: Create and push tag
-        id: tag_version
-        uses: mathieudutour/github-tag-action@v6.1
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          release_branches: main
-          default_bump: patch
-          tag_prefix: v
-          push_tag: true 
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          
+          # Get the latest tag
+          latest_tag=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.0")
+          
+          # Extract version numbers
+          IFS='.' read -r major minor patch <<< "${latest_tag#v}"
+          
+          # Increment patch version
+          new_patch=$((patch + 1))
+          new_tag="v$major.$minor.$new_patch"
+          
+          echo "Creating new tag: $new_tag"
+          
+          # Create and push the new tag
+          git tag -a "$new_tag" -m "Release $new_tag"
+          git push origin "$new_tag"
+          
+          echo "new_tag=$new_tag" >> $GITHUB_OUTPUT
+        id: create_tag 
