--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -97,17 +97,15 @@ jobs:
           if [[ "${{ matrix.archive }}" == "tar.gz" ]]; then
             tar czf ../td_${{ matrix.platform }}_${{ matrix.arch }}.${{ matrix.archive }} *
           else
-            if [[ "${{ runner.os }}" == "Windows" ]]; then
-              powershell -Command "Compress-Archive -Path * -DestinationPath ../td_${{ matrix.platform }}_${{ matrix.arch }}.${{ matrix.archive }}"
-            else
-              zip -r ../td_${{ matrix.platform }}_${{ matrix.arch }}.${{ matrix.archive }} *
-            fi
+            powershell -Command "Compress-Archive -Path * -DestinationPath ../td_${{ matrix.platform }}_${{ matrix.arch }}.${{ matrix.archive }}"
           fi
           cd ..
-          if [[ "${{ runner.os }}" == "macOS" ]]; then
+          
+          # Create checksum file
+          if [[ "${{ runner.os }}" == "Windows" ]]; then
+            powershell -Command "(Get-FileHash td_${{ matrix.platform }}_${{ matrix.arch }}.${{ matrix.archive }} -Algorithm SHA256).Hash.ToLower() + '  ' + 'td_${{ matrix.platform }}_${{ matrix.arch }}.${{ matrix.archive }}'" > td_${{ matrix.platform }}_${{ matrix.arch }}.sha256
+          elif [[ "${{ runner.os }}" == "macOS" ]]; then
             shasum -a 256 td_${{ matrix.platform }}_${{ matrix.arch }}.${{ matrix.archive }} > td_${{ matrix.platform }}_${{ matrix.arch }}.sha256
-          elif [[ "${{ runner.os }}" == "Windows" ]]; then
-            certutil -hashfile td_${{ matrix.platform }}_${{ matrix.arch }}.${{ matrix.archive }} SHA256 | findstr /v "hash" > td_${{ matrix.platform }}_${{ matrix.arch }}.sha256
           else
             sha256sum td_${{ matrix.platform }}_${{ matrix.arch }}.${{ matrix.archive }} > td_${{ matrix.platform }}_${{ matrix.arch }}.sha256
           fi
