--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -282,7 +282,7 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions Bot"
           git config --global user.email "actions@github.com"
-          git clone ssh://aur@aur.archlinux.org/td.git aur-repo
+          git clone ssh://aur@aur.archlinux.org/td-tui.git aur-repo
           cp PKGBUILD aur-repo/
           cp .SRCINFO aur-repo/
           cd aur-repo
