docs: Enhance README with comprehensive installation and project details
- Add installation instructions for Ubuntu/Debian and RHEL/Fedora/CentOS
- Include usage guidance and acknowledgements section
- Update license information
- Simplify release download instructions

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -143,7 +143,7 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{ needs.build.outputs.version }}
-          name: Release ${{ needs.build.outputs.version }}
+          name: ${{ needs.build.outputs.version }}
           files: td-*/*
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
